dc/s2n-quic-dc/src/snapshots/stream__writer__tests__client_control_channel_closed_during_queue_init_sent.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] TRACE c#credit.acquire.fast_path=1
0 [main] TRACE c#credit.acquire.bytes=5
0 [main] DEBUG event=on_init_sent prev=Init next=InitSent location=dc/s2n-quic-dc/src/stream/writer.rs
0 [main] DEBUG Sent QueueInit with early data binding_id=1 bytes_read=5 is_fin=false
0 [main] DEBUG Writer dropping binding_id=1 status=InitSent next_offset=5 remote_max_data=0
