dc/s2n-quic-dc/src/snapshots/stream__writer__tests__client_empty_fin_queue_bind.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] DEBUG event=on_queue_bound prev=Init next=Open location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG Sent QueueBind with early data binding_id=99 bytes_read=0 is_fin=true
0:00:00.000000000 [main] DEBUG Writer dropping binding_id=99 status=FinSent next_offset=0 inflight_bytes=0 remote_max_data=0
0:00:00.000000000 [main] DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
